syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

service DiscountProtoService{
	rpc GetDisocount(GetDiscountRequest) returns (GrpcCouponModel);
	rpc CreateDiscount(CreateDiscountRequest) returns (GrpcCouponModel);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (GrpcCouponModel);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest{
	string productName = 1;
}

message GrpcCouponModel{
    int32 id = 1;
    string productName = 2;
    string description = 3;
    int32 amount = 4;
}

message CreateDiscountRequest{
	GrpcCouponModel grpcCouponModel = 1;
}

message UpdateDiscountRequest {
	GrpcCouponModel grpcCouponModel = 1;
}

message DeleteDiscountRequest{
	string productName = 1;
}

message DeleteDiscountResponse{
	bool success = 1;
}